chore: no longer validate productaanvraag-dimpact productaanvraag on name but instead on the presence of required fields